--- a/example/config.yaml
+++ b/example/config.yaml
@@ -10,51 +10,8 @@
 # https://github.com/verdaccio/verdaccio/tree/master/conf
 #
 
-storage: /verdaccio/storage/data
 plugins: /verdaccio/plugins
-
-web:
-  title: Verdaccio
-
-auth:
-  htpasswd:
-    file: /verdaccio/storage/htpasswd
-
-security:
-  api:
-    jwt:
-      sign:
-        expiresIn: 60d
-        notBefore: 1
-  web:
-    sign:
-      expiresIn: 7d
-      notBefore: 1
-
-uplinks:
-  npmjs:
-    url: https://registry.npmjs.org/
-
-packages:
-  '@*/*':
-    access: $all
-    publish: $authenticated
-    unpublish: $authenticated
-    proxy: npmjs
-
-  '**':
-    access: $all
-    publish: $authenticated
-    unpublish: $authenticated
-    proxy: npmjs
-
-middlewares:
-  audit:
-    enabled: true
-
-logs:
-  - { type: stdout, format: pretty, level: debug }
-
+storage: /verdaccio/storage/data
 store:
   minio-storage:
     port: 9000
@@ -63,3 +20,34 @@ store:
     accessKey: this-is-not-so-secret
     secretKey: this-is-not-so-secret
     useSSL: false
+
+web:
+  title: Verdaccio
+
+auth:
+  htpasswd:
+    file: /verdaccio/storage/htpasswd
+
+uplinks:
+  npmjs:
+    url: https://registry.npmjs.org/
+
+packages:
+  '@*/*':
+    access: $all
+    publish: $all
+    unpublish: $all
+    proxy: npmjs
+
+  '**':
+    access: $all
+    publish: $all
+    unpublish: $all
+    proxy: npmjs
+
+middlewares:
+  audit:
+    enabled: true
+
+logs:
+  - { type: stdout, format: pretty, level: debug }
