Refactor example to be an acceptance check

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   },
   "scripts": {
     "postinstall": "bash ./scripts/post-install",
-    "example": "bash ./scripts/example",
+    "accept": "bash ./scripts/accept",
+    "start": "bash ./scripts/start",
     "lint": "eslint \"**/*.{js,ts}\"",
     "test": "jest",
     "fmt": "prettier -- --write ./**/*.{js,ts,json}",
