Use yarn in Dockerfile to provide a lockfile

--- a/example/Dockerfile
+++ b/example/Dockerfile
@@ -5,7 +5,7 @@ USER root
 ENV NODE_ENV=production
 COPY verdaccio-minio-storage /usr/local/lib/node_modules/verdaccio-minio-storage
 RUN cd /usr/local/lib/node_modules/verdaccio-minio-storage && \
-  npm install --production && \
+  yarn install --production --ignore-scripts && \
   ln -s /usr/local/lib/node_modules/verdaccio-minio-storage /verdaccio/plugins/verdaccio-minio-storage  && \
   chown -R 10001 /usr/local/lib/node_modules/verdaccio-minio-storage && \
   chown -R 10001 /verdaccio/plugins
