--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "start": "bash ./scripts/start",
     "lint": "eslint \"src/**/*.{js,ts}\"",
     "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "fmt": "prettier -- --write ./src/**/*.{js,ts,json}",
     "build": "yarn build:types && yarn build:js",
     "build:types": "tsc --emitDeclarationOnly",
@@ -48,13 +50,24 @@
   "devDependencies": {
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
+    "@types/jest": "^24.0.18",
     "@types/minio": "^7.0.2",
     "@types/node": "^12.7.2",
     "@verdaccio/babel-preset": "^8.0.0",
     "@verdaccio/eslint-config": "^8.0.0",
     "@verdaccio/types": "^8.0.0",
     "eslint": "^6.2.2",
+    "jest": "^24.9.0",
     "prettier": "^1.18.2",
+    "ts-jest": "^24.0.2",
     "typescript": "^3.5.3"
+  },
+  "jest": {
+    "roots": [
+      "<rootDir>/src"
+    ],
+    "transform": {
+      "^.+\\.ts?$": "ts-jest"
+    }
   }
 }
