--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@verdaccio/babel-preset": "^8.0.0",
     "@verdaccio/eslint-config": "^8.0.0",
     "@verdaccio/types": "^8.0.0",
+    "coveralls": "^3.0.6",
     "eslint": "^6.2.2",
     "jest": "^24.9.0",
     "prettier": "^1.18.2",
