--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
     "node": ">=8"
   },
   "scripts": {
+    "release": "bash ./scripts/release",
+    "release:major": "bash ./scripts/release --major",
+    "release:minor": "bash ./scripts/release --minor",
+    "release:patch": "bash ./scripts/release --patch",
     "accept": "bash ./scripts/accept",
     "hooks": "bash ./scripts/hooks",
     "start": "bash ./scripts/start",
