--- a/package.json
+++ b/package.json
@@ -46,14 +46,15 @@
     "build:js": "babel src/ --out-dir lib --extensions \".ts,.tsx\""
   },
   "dependencies": {
-    "@verdaccio/commons-api": "^8.0.0",
-    "@verdaccio/streams": "^8.0.0",
+    "@verdaccio/commons-api": "^8.3.0",
+    "@verdaccio/streams": "^8.3.0",
     "get-stream": "^5.1.0",
     "minio": "^7.0.12"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.0",
     "@babel/core": "^7.7.0",
+    "@babel/plugin-proposal-class-properties": "^7.7.0",
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-typescript": "^7.7.2",
     "@types/jest": "^24.0.23",
