Fix plugin version
Use `package.json` version number for the plugin version. Avoiding
version number being out of sync.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "strict": true,
     "outDir": "lib",
     "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
     "esModuleInterop": true,
     "typeRoots": ["./node_modules/@verdaccio/types/lib/verdaccio", "./node_modules/@types"]
   }
