--- a/example/docker-compose-4.2.yaml
+++ b/example/docker-compose-4.2.yaml
@@ -2,6 +2,7 @@ version: '3.7'
 
 services:
   verdaccio:
+    container_name: verdaccio
     build:
       context: .
       args:
@@ -13,9 +14,12 @@ services:
     environment:
       VERDACCIO_PROTOCOL: http
       VERDACCIO_PORT: 4873
+    networks:
+      - verdaccio
 
   minio:
     image: minio/minio:RELEASE.2020-02-07T23-28-16Z
+    container_name: minio
     command: server /data
     volumes:
       - minio:/data
@@ -24,6 +28,11 @@ services:
     environment:
       MINIO_ACCESS_KEY: this-is-not-so-secret
       MINIO_SECRET_KEY: this-is-not-so-secret
+    networks:
+      - verdaccio
 
 volumes:
   minio:
+
+networks:
+  verdaccio:
