--- a/example/docker-compose.yaml
+++ b/example/docker-compose.yaml
@@ -2,6 +2,7 @@ version: '3.7'
 
 services:
   verdaccio:
+    container_name: verdaccio
     build: .
     ports:
       - 4873:4873
@@ -10,9 +11,12 @@ services:
     environment:
       VERDACCIO_PROTOCOL: http
       VERDACCIO_PORT: 4873
+    networks:
+      - verdaccio
 
   minio:
     image: minio/minio:RELEASE.2020-02-07T23-28-16Z
+    container_name: minio
     command: server /data
     volumes:
       - minio:/data
@@ -21,6 +25,11 @@ services:
     environment:
       MINIO_ACCESS_KEY: this-is-not-so-secret
       MINIO_SECRET_KEY: this-is-not-so-secret
+    networks:
+      - verdaccio
 
 volumes:
   minio:
+
+networks:
+  verdaccio:
